force-app/main/default/objects/Property_Management__c.object
<CustomObject>
    <fields>
        <fullName>Mean_Latitude__c</fullName>
        <formula>IF(AND(Latitude_Min_Lower_Left__c &lt;&gt; 0, Latitude_Max_Upper_Right__c &lt;&gt; 0),TEXT(((Latitude_Min_Lower_Left__c+Latitude_Max_Upper_Right__c)/2)),&quot;null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average (mean) value of the upper right latitude and the lower left latitude. Used to center the atlas map.</inlineHelpText>
        <label>Mean Latitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mean_Longitude__c</fullName>
        <formula>IF(AND(Longitude_Min_Lower_Left__c &lt;&gt; 0, Longitude_Max_Upper_Right__c &lt;&gt; 0),TEXT(((Longitude_Min_Lower_Left__c+Longitude_Max_Upper_Right__c)/2)),&quot;null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average (mean) value of the upper right longitude and the lower left longitude. Used to center the atlas map.</inlineHelpText>
        <label>Mean Longitude</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitoring_Managed_in_ConservationTrack__c</fullName>
        <label>Monitoring Managed in ConservationTrack</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitoring_Obligation__c</fullName>
        <description>Will monitoring obligation on the property interest level easements.  This should address only the fee monitoring which is done at the PMU level rather than the individual interest level.</description>
        <inlineHelpText>Please describe the monitoring obligation at the overall Property Management Unit Level.  In general, this should address properties held in fee only.  Easement monitoring obligations should be detailed at the Property Interest level.</inlineHelpText>
        <label>Monitoring Obligation (Fee)</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monitoring_Transfers__c</fullName>
        <description>Shorten from long text area</description>
        <inlineHelpText>Briefly describe how TNC&apos;s conservation objectives and legal compliance will be maintained after the property or interest in the property is transferred.</inlineHelpText>
        <label>Monitoring Transfers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>My_Fee_Assignments__c</fullName>
        <description>For view to list fee inspections assigned to the user. Not on any layouts.</description>
        <formula>$User.Id = Inspector_Assigned__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>My Fee Inspection Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_Entity_Managing_Property__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please enter in the name of the entity managing the property if other than TNC.</inlineHelpText>
        <label>XDeprecate_Name of Entity Managing</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Irrigated_Ag_Waiver_Program__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>List name of waiver program (usually a coalition).</inlineHelpText>
        <label>XDeprecate_ Name of Irrigated Ag</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Lessee__c</fullName>
        <description>Refer to lease contract for this information</description>
        <inlineHelpText>Please include the name and address of the lessee.</inlineHelpText>
        <label>XDeprecate_Name of Lessee</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Person_Watermaster__c</fullName>
        <description>Moved to Water Right object</description>
        <inlineHelpText>Please enter the name of the person who submitted the latest water report or the name of the watermaster who submitted the report on behalf of TNC.</inlineHelpText>
        <label>XDeprecate_Name of Person/Watermaster</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Notice_of_Termination_Sent__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>If planning to terminate the Williamson contract, has notice of termination been sent?  If yes, please attach a copy of the termination notice to the &quot;Notes &amp; Attachments&quot; section of the property management record.</inlineHelpText>
        <label>XDeprecate_Notice of Termination Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>To Do</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_Owned_Interests__c</fullName>
        <inlineHelpText>Non-editable for reporting</inlineHelpText>
        <label>Number Owned Interests</label>
        <summaryFilterItems>
            <field>Property_Interest__c.Ownership_Status__c</field>
            <operation>equals</operation>
            <value>TNC Owned Fee, TNC Owned Rights, TNC Held Easement or Deed Restriction</value>
        </summaryFilterItems>
        <summaryForeignKey>Property_Interest__c.Property_Interest_Group__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oil_Mineral_Other_Reserved_Rights__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please describe ownership of any oil, gas, mineral, and/or other reserved rights and describe any terms of access.  Please attach deeds retaining ownership or deeds/documents setting forth access rights to the &quot;Notes &amp; Attachments&quot; section.</inlineHelpText>
        <label>XDeprecate_Oil, Mineral &amp; Other Reser</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operations__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Please select the name of the Operations staff person.</inlineHelpText>
        <label>Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000002zCpDEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Funding_Sources__c</fullName>
        <description>Refer to deal record</description>
        <inlineHelpText>From the list, select all the funding sources that contributed to the original acquisition of the property.</inlineHelpText>
        <label>XDeprecate_Original Funding Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Army Corps of Engineers</fullName>
                </value>
                <value>
                    <fullName>Atwell Endowment</fullName>
                </value>
                <value>
                    <fullName>Bureau of Land Management</fullName>
                </value>
                <value>
                    <fullName>Bureau of Reclamation</fullName>
                </value>
                <value>
                    <fullName>CALFED</fullName>
                </value>
                <value>
                    <fullName>CA Conservation Corps</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Conservation</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Fish &amp; Wildlife</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Food &amp; Agriculture</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Forestry &amp; Fire Protection</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Transportation (Caltrans)</fullName>
                </value>
                <value>
                    <fullName>CA Dept. of Water Resources (DWR)</fullName>
                </value>
                <value>
                    <fullName>CA Farmland Conservancy Program</fullName>
                </value>
                <value>
                    <fullName>CA State Parks</fullName>
                </value>
                <value>
                    <fullName>CA Tahoe Conservancy</fullName>
                </value>
                <value>
                    <fullName>Central Coast Opportunity Fund (CCOF)</fullName>
                </value>
                <value>
                    <fullName>Coachella Valley Mtns. Conservancy</fullName>
                </value>
                <value>
                    <fullName>Donation</fullName>
                </value>
                <value>
                    <fullName>Department of Parks &amp; Recreation</fullName>
                </value>
                <value>
                    <fullName>Federal Trust Fund</fullName>
                </value>
                <value>
                    <fullName>LPF Loan</fullName>
                </value>
                <value>
                    <fullName>Marine Conservation</fullName>
                </value>
                <value>
                    <fullName>Morgan Family Trust</fullName>
                </value>
                <value>
                    <fullName>NFWF</fullName>
                </value>
                <value>
                    <fullName>NOAA</fullName>
                </value>
                <value>
                    <fullName>National Park Service</fullName>
                </value>
                <value>
                    <fullName>Natural Resources Agency</fullName>
                </value>
                <value>
                    <fullName>NRCS</fullName>
                </value>
                <value>
                    <fullName>Northern Sierra Partnership (NSP)</fullName>
                </value>
                <value>
                    <fullName>Ocean Protection Council</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Assessor_Parcel_Numbers__c</fullName>
        <description>If applicable, please include the other APN&apos;s.</description>
        <inlineHelpText>If applicable, please include the historic APN&apos;s for the property.</inlineHelpText>
        <label>XDeprecate_Other_APNs_Historic</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Identifying_Tract_Name__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>If the tract has another name, please enter in the other identifying name.</inlineHelpText>
        <label>XDeprecate_Other Identifying Tract Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Interests_Held_by_Others__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Please describe other significant interests held by other parties such as prescriptive easements, water rights, etc.</inlineHelpText>
        <label>XDeprecate_Other Interests Held</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ownership_Status__c</fullName>
        <description>Moved toProperty Interest</description>
        <inlineHelpText>The Ownership Status indicates if TNC currently owns the property in fee, &quot;TNC Owned Fee&quot;;  no longer owns the property, &quot;Formerly Owned in Fee by TNC&quot;; or TNC does not own the property but manages it, &quot;TNC Managed.&quot;</inlineHelpText>
        <label>XDeprecate_Ownership Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Owned Fee</fullName>
                    <default>true</default>
                    <label>TNC Owned Fee</label>
                </value>
                <value>
                    <fullName>Formerly Fee Owned by TNC</fullName>
                </value>
                <value>
                    <fullName>TNC Managed</fullName>
                </value>
                <value>
                    <fullName>TNC Owned Mineral</fullName>
                </value>
                <value>
                    <fullName>TNC Owned Water</fullName>
                </value>
                <value>
                    <fullName>TNC Owned Interest-Other</fullName>
                </value>
                <value>
                    <fullName>TNC Owned Conservation Easement</fullName>
                </value>
                <value>
                    <fullName>Inactive - Combined with another PMU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMU_Map_URL__c</fullName>
        <formula>IF(Map_Extent_X_Min__c!=0,&quot;http://camaps.tnc.org/atlas/?extent=&quot;&amp;TEXT(Map_Extent_X_Min__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_Y_Min__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_X_Max__c)&amp;&quot;,&quot;&amp;TEXT(Map_Extent_Y_Max__c)&amp;&quot;&amp;config=config_propmgmt.xml&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Formula field creates the URL from the Map Extent x and y values. Read-Only.</inlineHelpText>
        <label>PMU Map URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROPERTY__c</fullName>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a read-only field that copies the Property Tracker ID number from the Property Management url. This ID number is used to provide a link from the GIS tract geometry to the Property Management page.</inlineHelpText>
        <label>PROPERTY_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paralegal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Paralegal</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partners_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved to Property Interest Level</description>
        <inlineHelpText>Please select the name of the Person or Organization that owns the associated property from the look up icon.  If an account does not exist associated with the owner, please create a new account and contact record.</inlineHelpText>
        <label>XDeprecate_Property Owner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Property Management</relationshipLabel>
        <relationshipName>R00N30000002zQ1QEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permit_ID__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>Please enter the Permit ID number from the License for Diversion and Water Use document issued by the State Water Rights Board.</inlineHelpText>
        <label>XDeprecate_Permit ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Property__c</fullName>
        <description>Move to Property interest for easements only.</description>
        <inlineHelpText>Please describe any personal property of note, such as irrigation, equipment, pumps, motors, etc. that easement monitors need to be aware of.</inlineHelpText>
        <label>XDeprecate_Personal Property</label>
        <length>280</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prior_Record_Owner_s_Contact_Info__c</fullName>
        <description>Should be using account for this info and if more than one, is on deal record.</description>
        <inlineHelpText>List all the prior individuals/entities on record title together with the ownership interests of each and the contact information (address, phone, fax) for each owner.</inlineHelpText>
        <label>XDeprecate_Prior Record Owner(s)</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Program_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Changed from Regional Conservation Director to Program Director due to 2014/15 Reorg to OWL. 2/9/17</description>
        <label>Program Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000022KXgEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <description>No longer using this information in new org structure and picklist not maintained as of 3/15/17</description>
        <label>XDeprecate_Project Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aetna Springs</fullName>
                </value>
                <value>
                    <fullName>Alameda</fullName>
                </value>
                <value>
                    <fullName>Albion River</fullName>
                </value>
                <value>
                    <fullName>Amargosa Canyon - China Ranch Wash</fullName>
                </value>
                <value>
                    <fullName>Amargosa River</fullName>
                </value>
                <value>
                    <fullName>Amargosa River - Grimshaw Lake</fullName>
                </value>
                <value>
                    <fullName>Amargosa River - Shoshone</fullName>
                </value>
                <value>
                    <fullName>Anacapa Island</fullName>
                </value>
                <value>
                    <fullName>Anderson Marsh</fullName>
                </value>
                <value>
                    <fullName>Antelope Creek</fullName>
                </value>
                <value>
                    <fullName>Arroyo Seco River</fullName>
                </value>
                <value>
                    <fullName>Ash Meadows</fullName>
                </value>
                <value>
                    <fullName>Austin Creek</fullName>
                </value>
                <value>
                    <fullName>Baja California</fullName>
                </value>
                <value>
                    <fullName>Baker Point</fullName>
                </value>
                <value>
                    <fullName>Baldy Peak</fullName>
                </value>
                <value>
                    <fullName>Ball Mountain</fullName>
                </value>
                <value>
                    <fullName>Battle Creek</fullName>
                </value>
                <value>
                    <fullName>Beale Afb Pools</fullName>
                </value>
                <value>
                    <fullName>Bear Creek</fullName>
                </value>
                <value>
                    <fullName>Bell Canyon</fullName>
                </value>
                <value>
                    <fullName>Big Meadows</fullName>
                </value>
                <value>
                    <fullName>Big Salmon Creek</fullName>
                </value>
                <value>
                    <fullName>Big Sky</fullName>
                </value>
                <value>
                    <fullName>Big Sulphur Creek</fullName>
                </value>
                <value>
                    <fullName>Bitterwater Wetlands</fullName>
                </value>
                <value>
                    <fullName>Black Mountain</fullName>
                </value>
                <value>
                    <fullName>Boggs Bend</fullName>
                </value>
                <value>
                    <fullName>Borax Lake</fullName>
                </value>
                <value>
                    <fullName>Breckenridge Mountain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Description__c</fullName>
        <inlineHelpText>Describe takeout strategy, including government agency transfers, restrictions, terms, conservation buyer transactions, expected timing and amounts.</inlineHelpText>
        <label>XDeprecate_Property Description</label>
        <length>900</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Improvements__c</fullName>
        <description>Should all be in Capital Improvements</description>
        <inlineHelpText>Please describe any improvements on the property; buildings, fences, agricultural/crops, etc.</inlineHelpText>
        <label>XDeprecate_Property Improvements</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Management_Map__c</fullName>
        <inlineHelpText>Deprecated - creating the urls from the extent fields instead so that we can rollup the extent for a property management unit from the property interests automatically.</inlineHelpText>
        <label>XDeprecated: Property Management Map ID</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Property_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If applicable, the property manager is the TNC staff person who manages the day to day activities on the property.- The &quot;on-the-ground&quot; manager as opposed to the regional or record owner. For easements and deed res. this might be the regional manager.</inlineHelpText>
        <label>Property Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N300000022KXfEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Number__c</fullName>
        <displayFormat>Property-{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Property Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Property_Signage_Description__c</fullName>
        <inlineHelpText>Please provide a description of the sign(s) located on the property, e.g., sign required by the grant funder or donor.  If no sign is present, please explain why, e.g.,  too remote, high risk of vandalism, etc.</inlineHelpText>
        <label>Property Signage Description</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Signage_Photo__c</fullName>
        <inlineHelpText>Please upload a photo of the property signage by selecting the image icon within this field.  You must be in edit mode in order to upload a photo.</inlineHelpText>
        <label>Property Signage Photo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Action_Pending__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Describe status of exemption filings, refunds pending, etc. and include name of person responsible for the exemption filing and the date.</inlineHelpText>
        <label>XDeprecate_Property Tax Action Pending</label>
        <length>1100</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Description__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Describe the property tax obligation.</inlineHelpText>
        <label>XDeprecate_Property Tax Description</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Tax_Intention__c</fullName>
        <inlineHelpText>Describe the intent for property tax exemption status post closing.</inlineHelpText>
        <label>XDeprecated_Property Tax Intention</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposed_Take_Out_Partner__c</fullName>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Enter in the name of the proposed partner the property is expected to be sold or transferred to.</inlineHelpText>
        <label>XDeprecate_Proposed Take-Out Partner</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Public_Access__c</fullName>
        <description>Moved to Property Interest Picklist field indicating whether a TNC fee interest allows public access. This field is used to determine if TNC preserves are in compliance with the American Disabilities Act on TNC Preserves. Please SOP for further information. ADuperault 7-2-12.</description>
        <inlineHelpText>Indicate whether the property is open to the public. If there is open or limited access, please complete and upload a Other Power-Driven Mobility Device (OPDMD) Assessment Form. See the &quot;American Disabilities Act on TNC Preserve&quot; SOP for help.</inlineHelpText>
        <label>XDeprecate_Public Access?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open Access</fullName>
                </value>
                <value>
                    <fullName>Limited Access</fullName>
                </value>
                <value>
                    <fullName>No Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_Use_of_Surface_Water__c</fullName>
        <description>Moved to Water Right object</description>
        <inlineHelpText>From the list, select the applicable purpose(s) and use(s) of the surface water.</inlineHelpText>
        <label>XDeprecate_Purpose &amp;Use of Surface Water</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural Irrigation</fullName>
                </value>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>Dust Control</fullName>
                </value>
                <value>
                    <fullName>Fire Protection</fullName>
                </value>
                <value>
                    <fullName>Frost Protection</fullName>
                </value>
                <value>
                    <fullName>Heat Control</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>In-stream Habitat</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Municipal</fullName>
                </value>
                <value>
                    <fullName>Power Generation</fullName>
                </value>
                <value>
                    <fullName>Recreational</fullName>
                </value>
                <value>
                    <fullName>Snowmaking</fullName>
                </value>
                <value>
                    <fullName>Stockwatering</fullName>
                </value>
                <value>
                    <fullName>Wildlife Enhancement</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Groundwater_Well__c</fullName>
        <description>Moved to Water Right object</description>
        <inlineHelpText>From the list, select the applicable purposes and uses of the groundwater well(s).</inlineHelpText>
        <label>XDeprecate_Purpose &amp; Use of Groundwater</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fill Ponds</fullName>
                </value>
                <value>
                    <fullName>Irrigate Land</fullName>
                </value>
                <value>
                    <fullName>Domestic Water</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Tract_Easement_Disposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved to Property Interest</description>
        <inlineHelpText>Select the name of the related tract easement disposition record from the look up icon.  If the tract easement disposition record does not exist, leave this field blank.</inlineHelpText>
        <label>XDeprecate_Related Tract Easement Disp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Management (Related Tract Easement Disposition)</relationshipLabel>
        <relationshipName>Property_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Tract_Fee_Acquisition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved to Property Interst</description>
        <inlineHelpText>Select the name of the original tract fee acquisition record from the look up icon.</inlineHelpText>
        <label>XDeprecate_Related Tract Fee Acq</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Management (Related Tract Fee Acquisition)</relationshipLabel>
        <relationshipName>R00N300000022KXkEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Tract_Fee_Disposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Moved to Property Interests</description>
        <inlineHelpText>Select the name of the related tract fee disposition record from the look up icon. If the tract fee disposition record does not exist, leave this field blank.</inlineHelpText>
        <label>XDeprecate_Related Tract Fee Disp</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Property Management (Related Tract Fee Disposition)</relationshipLabel>
        <relationshipName>Property_Management1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reporting_Cycle__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>The Division of Water Rights requires water right holders to submit reports annually or every three years.  Licensee reports are to be filed annually and Statement of Diversion and Use reports are to be filed every three years.</inlineHelpText>
        <label>XDeprecate_Reporting Cycle</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Triennial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>River_Miles__c</fullName>
        <description>Moved to water right object</description>
        <label>XDeprecate_River Miles</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Science_Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Science Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Senior_Project_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Senior Project Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Property_Management4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signage_on_Property__c</fullName>
        <inlineHelpText>Please select all types of property signs currently on the property.</inlineHelpText>
        <label>Signage on Property</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TNC Sign</fullName>
                </value>
                <value>
                    <fullName>Partner Sign</fullName>
                </value>
                <value>
                    <fullName>Grant Funder Sign</fullName>
                </value>
                <value>
                    <fullName>Donor Sign</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Statement_ID__c</fullName>
        <description>Moved to water right object</description>
        <inlineHelpText>Please enter the Statement ID number issued from the State Water Resources Control Board upon filing an Initial Statement of Water Diversion and Use (Statement ID).</inlineHelpText>
        <label>XDeprecate_Statement ID</label>
        <type>TextArea</type>
    </fields>
</CustomObject>